src/objects/Industry_Category_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minor_Category__c</fullName>
        <label>Minor Category</label>
        <picklist>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salmons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>four</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>We will use this as the unique key for this object. It will be a combination of Major Category and Sub Catgeory</description>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Industry Category Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Industry__c</columns>
        <columns>NAME</columns>
        <columns>Minor_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sub Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Category Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>